Fixes part 3. Tickets in the comment
Offence list wider
https://www.pivotaltracker.com/story/show/119815969

Transefer case too big
https://www.pivotaltracker.com/story/show/119810891

Dates alignment wrapping text
https://www.pivotaltracker.com/story/show/119727601

--- a/app/assets/stylesheets/moj/_layout.scss
+++ b/app/assets/stylesheets/moj/_layout.scss
@@ -23,7 +23,7 @@ body {
     @include first;
 }
 
-.grid-sidebar{
+.grid-sidebar:first-child{
 	.column-two-thirds{
 		width: 74%;
 	}
